--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.462.0",
+    "marked": "^15.0.4",
     "next-themes": "^0.4.4",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
     "react-refresh": "^0.14.2",
     "react-router-dom": "^7.0.1",
