--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-pdf-viewer/core": "^3.12.0",
     "@reduxjs/toolkit": "^2.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -20,9 +21,11 @@
     "next-themes": "^0.4.4",
     "path": "^0.12.7",
     "react": "^18.3.1",
+    "react-doc-viewer": "^0.1.14",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
+    "react-pdf": "^9.2.1",
     "react-redux": "^9.1.2",
     "react-refresh": "^0.14.2",
     "react-router-dom": "^7.0.1",
