--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-pdf": "^9.2.1",
     "react-redux": "^9.1.2",
     "react-refresh": "^0.14.2",
+    "react-resizable-panels": "^2.1.7",
     "react-router-dom": "^7.0.1",
     "redux-persist": "^6.0.0",
     "sonner": "^1.7.0",
